Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-598

SIGSEGV in TSAN of cbtree-test.TestConcurrentInsert

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • M5
    • 0.7.0
    • tablet
    • None

    Description

      Happened in http://sandbox.jenkins.cloudera.com/job/kudu-gerrit/7089/BUILD_TYPE=TSAN,label=kudu-gerrit-slaves.

      [ RUN      ] TestCBTree.TestConcurrentInsert
      *** Aborted at 1421790484 (unix time) try "date -d @1421790484" if you are using GNU date ***
      PC: @     0x7f1b8a08dd48 __tsan_read8
      *** SIGSEGV (@0x0) received by PID 23490 (TID 0x7f1b82b01cc0) from PID 0; stack trace: ***
          @     0x7f1b8a04a89a rtl_sigaction() at ??:0
          @     0x7f1b8763a500 (unknown) at ??:0
          @     0x7f1b8a08dd48 __tsan_read8 at ??:0
          @     0x7f1b8a0c090a kudu::tablet::btree::ValueSlice::as_slice() at ??:0
          @     0x7f1b8a0c08aa kudu::tablet::btree::LeafNode<>::Get() at ??:0
          @     0x7f1b8a0ae24a kudu::tablet::btree::CBTree<>::GetCopy() at ??:0
          @     0x7f1b8a0ad9f3 kudu::tablet::btree::VerifyGet<>() at ??:0
          @     0x7f1b8a0c3276 kudu::tablet::btree::VerifyRange<>() at ??:0
          @     0x7f1b8a0aee74 kudu::tablet::btree::InsertAndVerify<>() at ??:0
          @     0x7f1b8a0c2c6d boost::_bi::list5<>::operator()<>() at ??:0
          @     0x7f1b8a0c2b84 boost::_bi::bind_t<>::operator()() at ??:0
          @     0x7f1b8a0c2b51 boost::detail::thread_data<>::run() at ??:0
          @     0x7f1b88833d47 (unknown) at ??:0
          @     0x7f1b8a040225 __tsan::cur_thread_placeholder at ??:0
          @     0x7f1b87632851 (unknown) at ??:0
          @     0x7f1b869dc94d (unknown) at ??:0
          @                0x0 (unknown)
      

      It follows with a bunch of TSAN warnings about signal-unsafe calls inside a signal, pointing at kudu::tablet::btree::LeafNode<kudu::tablet::btree::SmallFanoutTraits>::Get(unsigned long, kudu::Slice*, kudu::Slice*) const /data1/jenkins-workspace/kudu-gerrit/BUILD_TYPE/TSAN/label/kudu-gerrit-slaves/src/kudu/tablet/concurrent_btree.h:731 (cbtree-test+0x0000000d38a9) as the line that triggered the SIGSEGV.

      Seems related to KUDU-381 or KUDU-400, but not exactly the same.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tlipcon Todd Lipcon
            adar Adar Dembo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment